Added comments and headings

--- a/ML_California_Housing_dataset.ipynb
+++ b/ML_California_Housing_dataset.ipynb
@@ -33,6 +33,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Loading dataset"
+      ],
+      "metadata": {
+        "id": "GMp52NklLruy"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "california = fetch_california_housing()\n",
@@ -392,6 +401,15 @@
           "execution_count": 2
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Exploration and Visualisation"
+      ],
+      "metadata": {
+        "id": "fwIK2d77Lxw5"
+      }
     },
     {
       "cell_type": "code",
@@ -910,6 +928,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Suggest there are some outliers for <code> AveRooms</code>"
+      ],
+      "metadata": {
+        "id": "C2EBEcbfMFVk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "sns.scatterplot(data=data, x='AveOccup', y='MedHouseVal')\n",
@@ -940,6 +967,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "few outliers for <code>AveOccup</code>"
+      ],
+      "metadata": {
+        "id": "kTHSM0RAL9qu"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "sns.boxplot(data.drop(\"Population\", axis=1))\n",
@@ -968,6 +1004,24 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Too many outliers for each feature\n"
+      ],
+      "metadata": {
+        "id": "Zcho2mMsL5bO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Splitting and Model Building"
+      ],
+      "metadata": {
+        "id": "CZECdCsgMPz7"
+      }
     },
     {
       "cell_type": "code",
@@ -1024,6 +1078,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model Evaluation"
+      ],
+      "metadata": {
+        "id": "djznKdlMMVE4"
+      }
     },
     {
       "cell_type": "code",
@@ -1175,6 +1238,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Finding and filtering Outliers\n"
+      ],
+      "metadata": {
+        "id": "CJkqvZQZNYf3"
+      }
     },
     {
       "cell_type": "code",
@@ -1585,6 +1657,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Model fitting with better data"
+      ],
+      "metadata": {
+        "id": "2JVWsNNuNhVL"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "model.fit(X_train, y_train)\n",
@@ -1609,6 +1690,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Far better performance after cleanin outliers"
+      ],
+      "metadata": {
+        "id": "mnwkMoK8NjtF"
+      }
     },
     {
       "cell_type": "code",
